# ticket-service-rust

./: .env.example  .env.github  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 20231109101113_create_tables.sql  20231111100644_populate_events.sql  20231111100841_populate_users.sql
src/: lib.rs  main.rs  services.rs
src/crypto/: mod.rs  password_hash.rs
src/dao/: db_context.rs  event_dao.rs  mod.rs  ticket_dao.rs  user_dao.rs
src/models/: aggregates.rs  event.rs  mod.rs  ticket.rs  user.rs
src/repository/: mod.rs
src/service/: event_service.rs  mod.rs  ticket_service.rs  user_service.rs
tests/: test.rs
tests/dao_test/: event_dao_test.rs  mod.rs  ticket_dao_test.rs  user_dao_test.rs
